fix: open and close sidemenu on mobile

--- a/src/components/SiteSidebar.scss
+++ b/src/components/SiteSidebar.scss
@@ -31,4 +31,13 @@
   &__group {
     margin-top: 1rem;
   }
+  &-wrapper .eds-floating-button.site-sidebar__close-menu {
+    position: fixed !important;
+    top: 79vh;
+    right: 14%;
+    opacity: 0;
+    &--open {
+      opacity: 1;
+    }
+  }
 }
